--- a/clouds1.css
+++ b/clouds1.css
@@ -16,9 +16,14 @@ body {
 #cloud1-back,
 #cloud2-back,
 #cloud3-back,
-#cloud4-back {
+#cloud4-back,
+#cloud5-back,
+#cloud6-back,
+#cloud7-back,
+#cloud8-back {
   filter: url(#filter-back);
   box-shadow: 300px 300px 30px -20px #fff;
+  animation: slide 20s linear infinite;
 }
 
 /* cloud -1  */
@@ -28,6 +33,7 @@ body {
   height: 275px;
   top: -35vh;
   left: -25vw;
+  animation: slide 20s linear infinite;
 }
 
 #cloud1-mid {
@@ -48,19 +54,20 @@ body {
   width: 100px;
   height: 275px;
   top: -50vh;
-  left: 8vw;
+  left: -8vw;
+  animation: slide 13s linear infinite;
 }
 
 #cloud2-mid {
   filter: url(#filter-mid);
   box-shadow: 300px 340px 70px -60px rgba(158, 168, 179, 0.5);
-  left: 8vw;
+  left: -8vw;
 }
 
 #cloud2-front {
   filter: url(#filter-front);
   box-shadow: 300px 370px 60px -100px rgba(0, 0, 0, 0.3);
-  left: 8vw;
+  left: -8vw;
 }
 
 /* cloud 3 */
@@ -69,19 +76,20 @@ body {
   width: 300px;
   height: 105px;
   top: -20vh;
-  left: 25vw;
+  left: -55vw;
+  animation: slide 15s linear infinite;
 }
 
 #cloud3-mid {
   filter: url(#filter-mid);
   box-shadow: 300px 340px 70px -60px rgba(158, 168, 179, 0.5);
-  left: 25vw;
+  left: -55vw;
 }
 
 #cloud3-front {
   filter: url(#filter-front);
   box-shadow: 300px 370px 60px -100px rgba(0, 0, 0, 0.3);
-  left: 25vw;
+  left: -55vw;
 }
 
 /* cloud 4 */
@@ -90,17 +98,124 @@ body {
   width: 500px;
   height: 305px;
   top: -30vh;
-  left: 55vw;
+  left: -80vw;
+  animation: slide 10s linear infinite;
 }
 
 #cloud4-mid {
   filter: url(#filter-mid);
   box-shadow: 300px 340px 70px -60px rgba(158, 168, 179, 0.5);
-  left: 55vw;
+  left: -80vw;
 }
 
 #cloud4-front {
   filter: url(#filter-front);
   box-shadow: 300px 370px 60px -100px rgba(0, 0, 0, 0.3);
-  left: 55vw;
+  left: -80vw;
+}
+
+/* cloud -5  */
+
+.cloud5 {
+  width: 600px;
+  height: 275px;
+  top: -15vh;
+  left: -125vw;
+  animation: slide2x 10s linear infinite;
+}
+
+#cloud5-mid {
+  filter: url(#filter-mid);
+  box-shadow: 300px 340px 70px -60px rgba(158, 168, 179, 0.5);
+  left: -125vw;
+}
+
+#cloud5-front {
+  filter: url(#filter-front);
+  box-shadow: 300px 370px 60px -100px rgba(0, 0, 0, 0.3);
+  left: -125vw;
+}
+
+/* cloud 6 */
+
+.cloud6 {
+  width: 300px;
+  height: 275px;
+  top: -50vh;
+  left: -110vw;
+  animation: slide2x 33s linear infinite;
+}
+
+#cloud6-mid {
+  filter: url(#filter-mid);
+  box-shadow: 300px 340px 70px -60px rgba(158, 168, 179, 0.5);
+  left: -110vw;
+}
+
+#cloud6-front {
+  filter: url(#filter-front);
+  box-shadow: 300px 370px 60px -100px rgba(0, 0, 0, 0.3);
+  left: -110vw;
+}
+
+/* cloud 7 */
+
+.cloud7 {
+  width: 250px;
+  height: 205px;
+  top: -10vh;
+  left: -140vw;
+  animation: slide2x 15s linear infinite;
+}
+
+#cloud7-mid {
+  filter: url(#filter-mid);
+  box-shadow: 300px 340px 70px -60px rgba(158, 168, 179, 0.5);
+  left: -140vw;
+}
+
+#cloud7-front {
+  filter: url(#filter-front);
+  box-shadow: 300px 370px 60px -100px rgba(0, 0, 0, 0.3);
+  left: -140vw;
+}
+
+/* cloud 8 */
+
+.cloud8 {
+  width: 500px;
+  height: 305px;
+  top: -30vh;
+  left: -190vw;
+  animation: slide2x 10s linear infinite;
+}
+
+#cloud8-mid {
+  filter: url(#filter-mid);
+  box-shadow: 300px 340px 70px -60px rgba(158, 168, 179, 0.5);
+  left: -190vw;
+}
+
+#cloud8-front {
+  filter: url(#filter-front);
+  box-shadow: 300px 370px 60px -100px rgba(0, 0, 0, 0.3);
+  left: -190vw;
+}
+
+@keyframes slide {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(100vw);
+  }
+}
+
+@keyframes slide {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(250vw);
+  }
 }
